Integrate Speex echo cancellation.